--- a/src/SCSS/layout/_nav.scss
+++ b/src/SCSS/layout/_nav.scss
@@ -52,11 +52,16 @@
         color: $blue;
         @include regular;
         text-transform: uppercase;
-        font-size: 1.6rem;
-        line-height: 2rem;
+        font-size: 2.8rem;
+        line-height: 3.6rem;
         padding-bottom: 0.4rem;
         border-bottom: 0.4rem solid $white;
         transition: $transition;
+
+        @include desktop_s {
+            font-size: 1.6rem;
+            line-height: 2rem;
+        }
 
         &:hover {
             border-bottom: 0.4rem solid $pink;
