--- a/src/SCSS/layout/_section.scss
+++ b/src/SCSS/layout/_section.scss
@@ -372,6 +372,7 @@
         display: flex; 
         flex-direction: column;
         gap: 8rem;
+        width: 100%;
 
         @include tablet {
             max-width: 53rem;
