--- a/src/SCSS/layout/_footer.scss
+++ b/src/SCSS/layout/_footer.scss
@@ -103,8 +103,8 @@
 
     &__image {
         position: absolute;
-        max-height: 51rem;
-        width: auto;
+        //max-height: 41rem;
+        //width: auto;
 
         &_left {
             top: 0;
