--- a/src/SCSS/base/_reset.scss
+++ b/src/SCSS/base/_reset.scss
@@ -19,7 +19,7 @@ body {
 img {
     width: 100%;
     height: 100%;
-    object-fit: cover;
+    object-fit: contain;
     display: inline-block;
     overflow: hidden;
 }
